vlib/v/checker/tests/wrong_option_type.vv
fn foo() int?{
	return 0
}